<?xml version="1.0" encoding="utf-8"?>
<resources>

    //---------------------------------------------- APP ----------------------------------------------/
    <string name="language_code">en</string>
    <string name="app_name">YouBaku</string>
    <string name="action_settings">Settings</string>
    <string name="loadingtext">Loading</string>
    //---------------------------------------------- APP ----------------------------------------------/




    //-------------------------------------------- MESSAGES -------------------------------------------/
    <string name="networkconnectionerrormessage">It appears there is no avalaible network connection. Try to find a WiFi point or look at your device settings</string>
    <string name="loadingdataerrormessage">We are unable to load the data at this time. Please try again in a moment</string>
    <string name="novenuemessage">No places found!\nTry with a new filter or go back to categories</string>
    <string name="nofavoritedvenuemessage">You have no favorited places! You can add places to your favorite list in place detail page.</string>
    <string name="openmapsappmessage">Open Maps app for getting directions to %1$s?</string>
    <string name="locationserviceserrormessagefordisabled">Your current location is required for finding places near you. Please turn on Location Services</string>
    <string name="locationserviceserrormessageforauthorizationstatusdenied">Please enable Location Services for %1$s app</string>
    <string name="locationserviceserrormessageforgetdirections">Your current location is required if you want to be get directions. Please turn on Location Services</string>
    <string name="locationserviceserrormessageforinvalidlocation">We are unable to get location at this time. Please try again in a moment</string>
    //-------------------------------------------- MESSAGES -------------------------------------------/




    //---------------------------------------- FILTER STRINGS -----------------------------------------/
    <string name="categorydistanceradius">in %1$s, %2$s places</string>

    <string name="keywordlabel">KEYWORD</string>
    <string name="searchboxplaceholderlabel">type a keyword</string>

    <string name="placefilterssectionlabel">PLACE FILTERS</string>
    <string name="opennowfilterlabel">Open now</string>
    <string name="isverifiedfilterlabel">Popular places</string>

    <string name="resultcountsectionlabel">SHOW BEST %1$s PLACES</string>

    <string name="distanceunitsectionlabel">DISTANCE UNIT</string>
    <string name="kilometerlabel">Kilometer/Meter</string>
    <string name="mileslabel">Miles/Yards</string>

    <string name="sortsectionlabel">SORT BY</string>
    <string name="sortbydistancelabel">Sort by distance</string>
    <string name="sortbyratinglabel">Sort by rating</string>
    <string name="sortbylikeslabel">Sort by likes</string>

    <string name="distancelabel">DISTANCE</string>
    <string name="likeslabel">LIKES</string>
    <string name="ratingslabel">RATING</string>
    //---------------------------------------- FILTER STRINGS -----------------------------------------/




    //-------------------------------------- ADD PLACE STRINGS ----------------------------------------/
    <string name="addplacetitlelabel">Add Place</string>

    <string name="placenamesectionlabel">PLACE NAME</string>
    <string name="namefieldplaceholder">Type place name</string>

    <string name="placecategorysectionlabel">CATEGORY</string>

    <string name="placelocationsectionlabel">LOCATION</string>
    <string name="locationfieldplaceholder">Select location</string>
    <string name="selectlocationtitlelabel">Location Selection</string>
    <string name="selectlocationsubtitlelabel">Touch to map to choose location</string>

    <string name="addresssectionlabel">ADDRESS</string>
    <string name="placeaddresssectionlabel">ADDRESS</string>
    <string name="addressfieldplaceholder">Type place address</string>

    <string name="placedescriptionsectionlabel">DESCRIPTION</string>
    <string name="descriptionfieldplaceholder">Type place description</string>

    <string name="placewebpagesectionlabel">WEB PAGE</string>
    <string name="webpagefieldplaceholder">Type web page</string>

    <string name="placephonesectionlabel">PHONE NUMBER</string>
    <string name="phonefieldplaceholder">Type phone number</string>

    <string name="placetwittersectionlabel">TWITTER</string>
    <string name="twitterfieldplaceholder">Type twitter user name</string>

    <string name="placefacebooksectionlabel">FACEBOOK</string>
    <string name="facebookfieldplaceholder">Type facebook user name</string>

    <string name="placephotosectionlabel">PHOTO</string>
    <string name="selectphotobuttonlabel">Choose Photo</string>

    <string name="formvalidationmessage">Please fill in all fields!</string>
    <string name="addplacesubtitlelabel">Pleaase fill in all fields</string>
    <string name="placesentsuccessmessage">Thank you! Your place has been added.</string>
    <string name="placesentunsuccessmessage">We are unable to add your place at this time. Please try again in a moment!</string>
    //-------------------------------------- ADD PLACE STRINGS ----------------------------------------/




    //------------------------------------- PLACE DETAIL STRINGS --------------------------------------/
    <string name="openbuttonlabel">OPEN</string>
    <string name="closedbuttonlabel">CLOSED</string>

    <string name="tipssectionlabel">REVIEWS</string>
    <string name="allphotossectionlabel">PHOTOS</string>
    <string name="dealssectionlabel">DEALS</string>

    <string name="likebuttonlabel">Like this place</string>
    <string name="addtofavoriteslabel">Add to Favorites</string>
    <string name="removefromfavoriteslabel">Remove from Favorites</string>
    <string name="writereviewbuttonlabel">Write a Review</string>
    <string name="uploadphotolabel">Upload Photo</string>

    <string name="titledistancelabel">away from you</string>

    <string name="uplaodinglabel">Uploading...</string>
    <string name="uploadfailedlabel">Upload failed!</string>
    <string name="uploadsuccesslabel">Uploaded</string>

    <string name="ratinglabl">Rating: </string>
    //------------------------------------- PLACE DETAIL STRINGS --------------------------------------/




    //------------------------------------- WRITE REVIEW STRINGS --------------------------------------/
    <string name="ratingsectionlabel">RATING</string>

    <string name="fullnamesectionlabel">FULL NAME</string>
    <string name="namefieldplaceholderlabel">Type your full name</string>

    <string name="emailsectionlabel">EMAIL ADDRESS</string>
    <string name="emailfieldplaceholderlabel">Type your email address</string>

    <string name="reviewsectionlabel">YOUR REVIEW</string>
    <string name="reviewplaceholderlabel">Type your review</string>

    <string name="reviewsentsuccessmessage">Thank you! Your review has been sent and waiting for approvement.</string>
    <string name="reviewsentunsuccessmessage">We are unable to send your review at this time. Please try again in a moment!</string>

    //------------------------------------- WRITE REVIEW STRINGS --------------------------------------/



    //----------------------------------------- BUTTON LABELS -----------------------------------------/
    <string name="alertokbuttonlabel">OK</string>
    <string name="alertcancelbuttonlabel">Cancel</string>
    <string name="retrybuttonlabel">Retry</string>
    <string name="filterbuttonlabel">Filter</string>
    <string name="donebuttonlabel">Done</string>
    <string name="newfilterbuttonlabel">New Filter</string>
    <string name="sendbuttonlabel">Send</string>
    <string name="selectbuttonlabel">Select</string>
    <string name="addbuttonlabel">Add</string>
    <string name="from_gallery">From gallery</string>
    <string name="from_camera">From camera</string>
    //----------------------------------------- BUTTON LABELS -----------------------------------------/


    //----------------------------------------- CATEGORIES LABELS -------------------------------------/
    <string name="favoritedCategoryName">My Favorite Places</string>

    //----------------------------------------- CATEGORIES LABELS -------------------------------------/




    //----------------------------------------- OTHER STRINGS ----------------------------------------/
    <string name="title_activity_place">PlaceActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="title_activity_place_favorite">PlaceFavoriteActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sub_category_list_activty">SubCategoryListActivty</string>
    <string name="title_activity_test_activty">TestActivty</string>
    <string name="userNameHint">Enter your username</string>
    <string name="loginStr">Login</string>
    <string name="userPassHint">Enter your password</string>
    <string name="loginlabel">Sign in</string>
    <string name="loginrequirement">You should login first to add comment!</string>
    <string name="reservationbuttonlabel">Booking a place</string>
    <string name="selectCategoryLabel">Select one or more categories</string>
    <string name="searcBtnLabel">Search</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="labelGo">GO</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="labelName">Your Name</string>
    <string name="labelSurname">Your Surname</string>
    <string name="labelUsername">Username</string>
    <string name="labelPassword" >Password</string>
    <string name="labelAgainPassword" >Password Again</string>
    <string name="labelEmail">Email</string>
    <string name="labelRegister">Register</string>
    <string name="labelGoBack">Go Back</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="logout">Log Out</string>
    <string name="rateLabel"><![CDATA[Rate & Review]]></string>
    <string name="nearmeFilterOptLabel">Filter Options</string>
    <string name="enableMapMoveable">Enable Map Movable</string>
    <string name="okBtnLabel">OK</string>
    <string name="filterByLabel">FILTER BY :</string>
    <string name="verifyLogoutLabel">Are you sure you want to logout?</string>
    <string name="underConstuctionLabel">This page is under construction</string>
    <string name="yb_register_title">YouBaku Registartion</string>
    <string name="loadingLabel">Loading..</string>
    <string name="numberOfPeople">Number of People</string>
    <string name="dateLabel">Date</string>
    <string name="timeLabel">Time</string>
    <string name="contactLabel">Contact</string>
    <string name="bookingDetailLabel">Reservation Detail</string>
    <string name="multipleCommentError">You have already commented on this plac!</string>
    <string name="placesWithinkm">Places within 10km</string>
    <string name="notFound">We are sorry! No places found!</string>
    <string name="nPlacesFoundForCriteria">\"place(s) found for your criteria\"</string>
    <string name="GPScloseInfo">We are sorry! You should first open GPS to use Application.</string>
    <string name="GPSdisableInfo">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="noContactLabel">No contact number</string>
    //----------------------------------------- OTHER STRINGS ----------------------------------------/



</resources>