<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.youbaku.apps.placesnear.RegisterActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:id="@+id/register_main"
        android:background="#eee">
        <TextView
            android:layout_marginBottom="15dp"
            android:layout_marginTop="30dp"
            style="@android:style/TextAppearance.Large"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:text="@string/yb_register_title"/>


        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:inputType="text"
            android:hint="@string/labelName"
            android:background="@android:color/white" />



        <EditText
            android:id="@+id/registerSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:inputType="text"
            android:hint="@string/labelSurname"
            android:background="@android:color/white" />



        <EditText
            android:id="@+id/registerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:hint="@string/labelUsername"
            android:background="@android:color/white" />




        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:inputType="textPassword"
            android:hint="@string/labelPassword"
            android:background="@android:color/white" />



        <EditText
            android:id="@+id/registerAgainPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:inputType="textPassword"
            android:hint="@string/labelAgainPassword"
            android:background="@android:color/white" />


        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:paddingBottom="15dp"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:inputType="text"
            android:hint="@string/labelEmail"
            android:background="@android:color/white" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:background="@drawable/custombuttongenoa"
                android:textColor="@android:color/white"
                android:text="@string/labelRegister"/>

            <Button
                android:id="@+id/registerGoBack"
                android:layout_toLeftOf="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:background="@drawable/custombuttongenoa"
                android:textColor="@android:color/white"
                android:text="@string/labelGoBack"/>
        </RelativeLayout>



    </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:visibility="invisible"
        android:id="@+id/register_load"
        android:background="#eee">
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar_activity_register"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"
            android:text="@string/loadingLabel"/>
    </LinearLayout>

</RelativeLayout>



