<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ratingsectionlabel"
        android:padding="5dp"
        android:id="@+id/textView10" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/inputFields">
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_new_comment"
            android:layout_centerInParent="true"
            android:numStars="5"
            android:stepSize="1"
            android:rating="3.5"
            />
    </RelativeLayout>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reviewsectionlabel"
        android:padding="5dp"
        android:id="@+id/textView15" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="top"
        style="@style/inputFields"
        android:hint="@string/reviewplaceholderlabel"
        android:ems="10"
        android:minLines="4"
        android:id="@+id/comment_new_comment" />
</LinearLayout>
</ScrollView>